# RLDX.nvim

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt  go.mod  go.sum  main.go
app/cmd/api/: base.go  insert.go  search.go
app/cmd/nvim/: base.go
app/nvim/: base.go
docs/: formatting.org  obfuscation.org
include/: errors.h  sqlite3.h
lib/api/: base.go  helpers.go  insert.go  search.go
lib/nvim/: base.go
lua/hashings/: init.lua
lua/rldx/: completion.lua  config.lua  highlighting.lua  init.lua  lazy.lua  settings.lua  shared.lua  utils.lua
lua/rldx/extras/: lspkind.lua  xor.lua
lua/rldx/schema/: crud.lua
lua/rldx/schema/v0_0_2/: crud.lua  middleware.lua
lua/rldx/utils/: algos.lua  crud.lua  fs.lua
lua/rldx/utils/v0_0_2/: crud.lua  middleware.lua
lua/rldx/utils/v0_1_0/: middleware.lua
lua/rldx/utils/v0_2_0/: middleware.lua
lua/rldx/utils/v0_3_0/: middleware.lua
lua/rldx/utils/v0_4_0/: middleware.lua
lua/rolodex/: completion.lua  config.lua  highlighting.lua  init.lua  lazy.lua  rolo_spec.lua  utils.lua
models/: identity.go
sample_data/: rldx_schema_0_1_0.json
schemas/v0.0.2/: rldx_sample_0_0_2.json  rldx_schema_0_0_2.json
schemas/v0.1.0/: rldx_sample_0_1_0.json  rldx_schema_0_1_0.json
schemas/v0.2.0/: rldx_sample_0_2_0.json  rldx_schema_0_2_0.json
schemas/v0.3.0/: rldx_sample_0_3_0.json  rldx_schema_0_3_0.json
schemas/v0.4.0/: rldx_sample_0_4_0.json  rldx_schema_0_4_0.json
src/: crud.cpp  errors.cpp  main.cpp
